--- a/examples/canvas.html
+++ b/examples/canvas.html
@@ -13,13 +13,13 @@
 
       renderer.setAnimationLoop(animate);
 
-      scene = new THREE.Scene();
+      const scene = new THREE.Scene();
       scene.matrixAutoUpdate = false;
       // scene.background = new THREE.Color(0x3B3961);
 
-      camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+      const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
       // camera.position.set(0, 1, 0);
-      camera.lookAt(new THREE.Vector3());
+      // camera.lookAt(new THREE.Vector3());
       scene.add(camera);
 
       const ambientLight = new THREE.AmbientLight(0x808080);
@@ -34,7 +34,7 @@
       const canvas = document.createElement('canvas');
       canvas.width = 1024;
       canvas.height = 1024;
-      document.body.appendChild(canvas);
+      // document.body.appendChild(canvas);
 
       const ctx = canvas.getContext('2d');
       ctx.fillStyle = '#FFFFFF';
@@ -45,9 +45,9 @@
       // ctx.fillText('lol', 512, 512);
 
       const planeMesh = (() => {
-        const geometry = new THREE.PlaneBufferGeometry(0.3, 0.3);
+        const geometry = new THREE.PlaneBufferGeometry(0.8, 0.8);
         const texture = new THREE.Texture(
-          canvas,
+          canvas/*,
           THREE.UVMapping,
           THREE.ClampToEdgeWrapping,
           THREE.ClampToEdgeWrapping,
@@ -55,12 +55,16 @@
           THREE.NearestFilter,
           THREE.RGBAFormat,
           THREE.UnsignedByteType,
-          1
+          1 */
         );
+        texture.needsUpdate = true;
         const material = new THREE.MeshBasicMaterial({
           map: texture,
+          // color: 0xFF0000,
         });
         const mesh = new THREE.Mesh(geometry, material);
+        mesh.position.z = -1;
+        mesh.updateMatrixWorld();
         return mesh;
       })();
       scene.add(planeMesh);
