--- a/examples/canvas.html
+++ b/examples/canvas.html
@@ -40,23 +40,38 @@
       ctx.fillStyle = '#FFFFFF';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
       ctx.fillStyle = '#FF0000';
-      ctx.fillRect(100, 100, 200, 200);
+      ctx.fillRect(100, 100, 300, 300);
       // ctx.font = '30px Arial';
       // ctx.fillText('lol', 512, 512);
 
+      const texture = new THREE.Texture(
+        canvas/*,
+        THREE.UVMapping,
+        THREE.ClampToEdgeWrapping,
+        THREE.ClampToEdgeWrapping,
+        THREE.NearestFilter,
+        THREE.NearestFilter,
+        THREE.RGBAFormat,
+        THREE.UnsignedByteType,
+        1 */
+      );
+      
+      const img = new Image();
+      img.onload = () => {
+        ctx.drawImage(img, 200, 200, 300, 300);
+
+        const imageData = ctx.getImageData(100, 100, 300, 300);
+        ctx.putImageData(imageData, 100, 500);
+
+        texture.needsUpdate = true;
+      };
+      img.onerror = err => {
+        console.warn(err);
+      };
+      img.src = 'test.jpg';
+
       const planeMesh = (() => {
         const geometry = new THREE.PlaneBufferGeometry(0.8, 0.8);
-        const texture = new THREE.Texture(
-          canvas/*,
-          THREE.UVMapping,
-          THREE.ClampToEdgeWrapping,
-          THREE.ClampToEdgeWrapping,
-          THREE.NearestFilter,
-          THREE.NearestFilter,
-          THREE.RGBAFormat,
-          THREE.UnsignedByteType,
-          1 */
-        );
         texture.needsUpdate = true;
         const material = new THREE.MeshBasicMaterial({
           map: texture,
