--- a/examples/canvas.html
+++ b/examples/canvas.html
@@ -59,6 +59,7 @@
         texture.needsUpdate = true;
         
         const img = new Image();
+        img.crossOrigin = 'Anonymous';
         img.onload = () => {
           ctx.drawImage(img, 200, 200, 300, 300);
 
@@ -99,6 +100,7 @@
         const texture = new THREE.Texture();
         
         const img = new Image();
+        img.crossOrigin = 'Anonymous';
         img.onload = () => {
           texture.image = img;
           texture.needsUpdate = true;
