--- a/examples/canvas.html
+++ b/examples/canvas.html
@@ -73,6 +73,15 @@
               ctx.drawImage(imageBitmap, 500, 0);
               texture.needsUpdate = true;
             })
+            .then(() =>
+              createImageBitmap(img, {
+                imageOrientation: 'flipY',
+              })
+              .then(imageBitmap => {
+                ctx.drawImage(imageBitmap, 500, 500);
+                texture.needsUpdate = true;
+              })
+            )
             .catch(err => {
               console.warn(err.stack);
             });
