Add texture.flipY test to canvas.html

--- a/examples/canvas.html
+++ b/examples/canvas.html
@@ -107,6 +107,7 @@
 
       (() => {
         const texture = new THREE.Texture();
+        texture.flipY = false;
         
         const img = new Image();
         img.crossOrigin = 'Anonymous';
