--- a/examples/browser.html
+++ b/examples/browser.html
@@ -3,7 +3,16 @@
   <body>
     <script src="three.js"></script>
     <script>
-let renderer, scene, camera, iframe, planeMesh;
+let renderer, scene, camera, iframe, planeMesh, focused;
+
+const localVector = new THREE.Vector3();
+const localVector2 = new THREE.Vector3();
+const localVector3 = new THREE.Vector3();
+const localCoord = new THREE.Vector2();
+const localPlane = new THREE.Plane();
+const localLine = new THREE.Line3();
+const localLine2 = new THREE.Line3();
+const localRaycaster = new THREE.Raycaster();
 
 function init() {
   renderer = new THREE.WebGLRenderer({
@@ -41,8 +50,10 @@ function init() {
   iframe.src = 'https://google.com';
   document.body.appendChild(iframe);
 
+  const planeWorldWidth = 0.9;
+  const planeWorldHeight = 0.9;
   planeMesh = (() => {
-    const geometry = new THREE.PlaneBufferGeometry(0.9, 0.9)
+    const geometry = new THREE.PlaneBufferGeometry(planeWorldWidth, planeWorldHeight)
       // .applyMatrix(new THREE.Matrix4().makeScale(-1, -1, 1));
     const uvs = geometry.attributes.uv.array;
     const numUvs = uvs.length / 2;
@@ -71,9 +82,101 @@ function init() {
     });
     const mesh = new THREE.Mesh(geometry, material);
     mesh.position.z = -1;
+    mesh.projectMouse = (x, y) => {
+      const leftLine = localLine;
+      const topLine = localLine2;
+      const plane = localPlane;
+      const raycaster = localRaycaster;
+
+      leftLine.start
+        .set(-planeWorldWidth/2, planeWorldHeight/2, 0)
+        .applyMatrix4(mesh.matrixWorld);
+      leftLine.end
+        .set(-planeWorldWidth/2, -planeWorldHeight/2, 0)
+        .applyMatrix4(mesh.matrixWorld);
+
+      topLine.start
+        .set(-planeWorldWidth/2, planeWorldHeight/2, 0)
+        .applyMatrix4(mesh.matrixWorld);
+      topLine.end
+        .set(planeWorldWidth/2, planeWorldHeight / 2, 0)
+        .applyMatrix4(mesh.matrixWorld);
+
+      plane.setFromCoplanarPoints(
+        leftLine.start,
+        leftLine.end,
+        topLine.end
+      );
+
+      raycaster.setFromCamera(localCoord.set((x/window.innerWidth - 0.5) * 2, (y/window.innerHeight - 0.5) * 2), camera);
+      const intersectionPoint = raycaster.ray.intersectPlane(plane, localVector);
+      if (intersectionPoint) {
+        const leftIntersectionPoint = leftLine.closestPointToPoint(intersectionPoint, true, localVector2);
+
+        const topIntersectionPoint = topLine.closestPointToPoint(intersectionPoint, true, localVector3);
+
+        const xFactor = topIntersectionPoint.distanceTo(topLine.start) / planeWorldWidth;
+        const yFactor = leftIntersectionPoint.distanceTo(leftLine.start) / planeWorldHeight;
+        const distance = raycaster.ray.origin.distanceTo(intersectionPoint);
+
+        if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < 3) {
+          const x = xFactor * window.innerWidth;
+          const y = (1 - yFactor) * window.innerHeight;
+
+          return localCoord.set(x, y);
+        } else {
+          return null;
+        }
+      } else {
+        return null;
+      }
+    };
     return mesh;
   })();
   scene.add(planeMesh);
+
+  focused = true;
+
+  window.addEventListener('mousemove', e => {
+    const coord = planeMesh.projectMouse(e.clientX, e.clientY);
+
+    if (coord) {
+      iframe.sendMouseMove(coord.x, coord.y);
+    }
+  });
+  window.addEventListener('mousedown', e => {
+    const coord = planeMesh.projectMouse(e.clientX, e.clientY);
+
+    if (coord) {
+      iframe.sendMouseDown(coord.x, coord.y);
+
+      focused = true;
+    } else {
+      focused = false;
+    }
+  });
+  window.addEventListener('mouseup', e => {
+    const coord = planeMesh.projectMouse(e.clientX, e.clientY);
+
+    if (coord) {
+      iframe.sendMouseUp(coord.x, coord.y);
+    }
+  });
+  window.addEventListener('keydown', e => {
+    if (focused) {
+      iframe.sendKeyDown(e.keyCode);
+    }
+  });
+  window.addEventListener('keyup', e => {
+    if (focused) {
+      iframe.sendKeyUp(e.keyCode);
+    }
+  });
+  window.addEventListener('keypress', e => {
+    if (focused) {
+      iframe.sendKeyPress(e.keyCode);
+    }
+  });
 
   renderer.setAnimationLoop(animate);
 }
