--- a/examples/browser.html
+++ b/examples/browser.html
@@ -72,6 +72,9 @@ function init() {
     console.log(source + ':' + line + ': ' + message);
   };
   document.body.appendChild(iframe);
+  setTimeout(() => {
+    iframe.src = 'https://gmail.com/';
+  }, 2000);
 
   const planeWorldWidth = 0.9;
   const planeWorldHeight = 0.9;
