--- a/examples/browser.html
+++ b/examples/browser.html
@@ -174,7 +174,7 @@ function init() {
     const coord = planeMesh.projectMouse(e.clientX, e.clientY);
 
     if (coord) {
-      iframe.sendMouseDown(coord.x, coord.y);
+      iframe.sendMouseDown(coord.x, coord.y,e.button); 
 
       focused = true;
     } else {
@@ -185,7 +185,7 @@ function init() {
     const coord = planeMesh.projectMouse(e.clientX, e.clientY);
 
     if (coord) {
-      iframe.sendMouseUp(coord.x, coord.y);
+      iframe.sendMouseUp(coord.x, coord.y,e.button);
     }
   });
   window.addEventListener('wheel', e => {
@@ -200,13 +200,13 @@ function init() {
       } else if (e.keyCode === 39 && e.altKey) { // Alt-Right
         iframe.forward();
       } else {
-        iframe.sendKeyDown(e.keyCode);
+        iframe.sendKeyDown(e.keyCode,{shiftKey:e.shiftKey,ctrlKey:e.ctrlKey,altKey:e.altKey});
       }
     }
   });
   window.addEventListener('keyup', e => {
     if (focused) {
-      iframe.sendKeyUp(e.keyCode);
+      iframe.sendKeyUp(e.keyCode,{shiftKey:e.shiftKey,ctrlKey:e.ctrlKey,altKey:e.altKey});
     }
   });
   window.addEventListener('keypress', e => {
@@ -214,7 +214,7 @@ function init() {
       if (e.keyCode === 114 && e.ctrlKey) { // Ctrl-R
         iframe.reload();
       } else {
-        iframe.sendKeyPress(e.keyCode);
+        iframe.sendKeyPress(e.keyCode,{shiftKey:e.shiftKey,ctrlKey:e.ctrlKey,altKey:e.altKey});
       }
     }
   });
