--- a/examples/browser.html
+++ b/examples/browser.html
@@ -218,8 +218,6 @@ function init() {
       }
     }
   });
-
-  renderer.setAnimationLoop(animate);
 }
 
 init();
@@ -242,6 +240,46 @@ function animate() {
 
   renderer.render(scene, camera);
 }
+
+if (navigator.xr) {
+  (async () => {
+    display = await navigator.xr.requestDevice();
+    const session = await display.requestSession({
+      exclusive: true,
+    });
+    display.session = session;
+
+    session.onselect = e => {
+      console.log('select'); // XXX
+    };
+
+    session.requestAnimationFrame((timestamp, frame) => {
+      renderer.vr.setSession(session, {
+        frameOfReferenceType: 'stage',
+      });
+
+      const viewport = session.baseLayer.getViewport(frame.views[0]);
+      const width = viewport.width;
+      const height = viewport.height;
+
+      renderer.setSize(width * 2, height);
+
+      renderer.setAnimationLoop(null);
+
+      renderer.vr.enabled = true;
+      renderer.vr.setDevice(display);
+      renderer.vr.setAnimationLoop(animate);
+
+      console.log('running!');
+    });
+  })()
+    .catch(err => {
+      console.warn(err.stack);
+    });
+} else {
+  renderer.setAnimationLoop(animate);
+}
+
     </script>
   </body>
 </html>
