--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -23,7 +23,7 @@ const fontSize = 60;
 const keyboardWidth = 2048;
 const keyboardHeight = 716;
 const keyboardMatrix = [keyboardWidth / 963.266, keyboardHeight / 337.215];
-const cursorWidth = 10;
+const cursorWidth = 4;
 
 const localVector = new THREE.Vector3();
 const localVector2 = new THREE.Vector3();
@@ -381,8 +381,8 @@ const _makeRig = () => {
       const material = new THREE.MeshBasicMaterial({
         map: texture,
         side: THREE.DoubleSide,
-        // transparent: true,
-        // alphaTest: 0.9,
+        transparent: true,
+        alphaTest: 0.9,
       });
       const mesh = new THREE.Mesh(geometry, material);
       // mesh.position.y = -menuWorldHeight/2;
@@ -413,6 +413,9 @@ const _makeRig = () => {
           const {width} = ctx.measureText('[' + urlState.text.slice(0, i) + ']');
           urlState.measures.push(width - barWidth*2);
         }
+
+        ctx.fillStyle = '#000';
+        ctx.fillRect(10 + urlState.measures[urlState.cursor] - cursorWidth/2, 20, cursorWidth, urlBarHeight - 20*2);
 
         texture.needsUpdate = true;
       };
@@ -448,6 +451,80 @@ const _makeRig = () => {
     })();
     object.add(urlMesh);
     object.urlMesh = urlMesh;
+
+    const optionsMesh = (() => {
+      const canvas = document.createElement('canvas');
+      canvas.width = menuWidth;
+      canvas.height = menuHeight;
+      const ctx = canvas.getContext('2d');
+
+      const geometry = new THREE.PlaneBufferGeometry(menuWorldWidth, menuWorldHeight);
+      const texture = new THREE.Texture(
+        canvas,
+        THREE.UVMapping,
+        THREE.ClampToEdgeWrapping,
+        THREE.ClampToEdgeWrapping,
+        THREE.NearestFilter,
+        THREE.NearestFilter,
+        THREE.RGBAFormat,
+        THREE.UnsignedByteType,
+        1
+      );
+      texture.needsUpdate = true;
+      const material = new THREE.MeshBasicMaterial({
+        map: texture,
+        side: THREE.DoubleSide,
+        transparent: true,
+        alphaTest: 0.9,
+      });
+      const mesh = new THREE.Mesh(geometry, material);
+      mesh.position.y = -menuWorldHeight - (10/menuHeight*menuWorldHeight);
+      // mesh.updateMatrixWorld();
+      mesh.frustumCulled = false;
+
+      ctx.fillStyle = '#42a5f5';
+      ctx.fillRect(0, 0, menuHeight*2, menuHeight);
+      ctx.fillStyle = '#FFF';
+      ctx.font = `${fontSize}px Arial`;
+      ctx.fillText('3D', menuHeight - 30, menuHeight/2 + 20);
+
+      ctx.fillStyle = '#EEE';
+      ctx.fillRect(menuHeight*2 + 10, 0, menuHeight*2, menuHeight);
+      ctx.fillStyle = '#000';
+      ctx.font = `${fontSize}px Arial`;
+      ctx.fillText('2D', menuHeight*3 - 30, menuHeight/2 + 20);
+
+      texture.needsUpdate = true;
+
+      mesh.plane = new THREE.Plane();
+      mesh.leftLine = new THREE.Line3();
+      mesh.topLine = new THREE.Line3();
+      mesh.update = () => {
+        mesh.leftLine.start
+          .set(-menuWorldWidth/2, menuWorldHeight/2, 0)
+          .applyMatrix4(mesh.matrixWorld);
+        mesh.leftLine.end
+          .set(-menuWorldWidth/2, -menuWorldHeight/2, 0)
+          .applyMatrix4(mesh.matrixWorld);
+
+        mesh.topLine.start
+          .set(-menuWorldWidth/2, menuWorldHeight/2, 0)
+          .applyMatrix4(mesh.matrixWorld);
+        mesh.topLine.end
+          .set(menuWorldWidth/2, menuWorldHeight / 2, 0)
+          .applyMatrix4(mesh.matrixWorld);
+
+        mesh.plane.setFromCoplanarPoints(
+          mesh.leftLine.start,
+          mesh.leftLine.end,
+          mesh.topLine.end
+        );
+      };
+
+      return mesh;
+    })();
+    object.add(optionsMesh);
+    object.optionsMesh = optionsMesh;
 
     return object;
   })();
@@ -804,6 +881,7 @@ function animate(time, frame) {
         const keyMesh = planeMesh.keyMeshes[i];
         keyboardMesh.update();
         menuMesh.urlMesh.update();
+        menuMesh.optionsMesh.update();
 
         // keyboard
         {
@@ -885,8 +963,6 @@ function animate(time, frame) {
 
         // menu mesh
         {
-          // let urlCoords = null;
-          // let intersectionRect = null;
           const intersectionPoint = menuMesh.visible ? controllerMesh.ray.intersectPlane(menuMesh.urlMesh.plane, localVector) : null;
           if (intersectionPoint) {
             const leftIntersectionPoint = menuMesh.urlMesh.leftLine.closestPointToPoint(intersectionPoint, true, localVector2);
@@ -902,8 +978,61 @@ function animate(time, frame) {
               const y = yFactor * menuHeight;
 
               if (y < urlBarOffset*2) {
-                // urlCoords = [x, y];
+                intersectionPoints.push(intersectionPoint.clone());
+                intersectionCbs.push(() => {
+                  controllerMesh.rayMesh.scale.z = distance;
+                  controllerMesh.updateMatrixWorld();
 
+                  controllerMesh.rayDot.position.z = -distance;
+                  controllerMesh.updateMatrixWorld();
+                  controllerMesh.rayDot.visible = true;
+
+                  const gamepads = navigator.getGamepads();
+                  const gamepad = gamepads[i];
+                  if (gamepad.buttons[1].pressed) {
+                    const textX = x - cursorWidth;
+                    let closestIndex = -1;
+                    let closestDistance = Infinity;
+                    for (let i = 0; i < menuMesh.urlMesh.urlState.measures.length; i++) {
+                      const urlMeasure = menuMesh.urlMesh.urlState.measures[i];
+                      const distance = Math.abs(urlMeasure - textX);
+                      if (distance < closestDistance) {
+                        closestIndex = i;
+                        closestDistance = distance;
+                      }
+                    }
+                    if (closestIndex !== -1) {
+                      menuMesh.urlMesh.urlState.cursor = closestIndex;
+                      menuMesh.urlMesh.updateText();
+                    }
+                  }
+
+                  intersectionSpecs[i] = null;
+                });
+              }
+            }
+          }
+        }
+
+        // options mesh
+        {
+          const intersectionPoint = menuMesh.visible ? controllerMesh.ray.intersectPlane(menuMesh.optionsMesh.plane, localVector) : null;
+          if (intersectionPoint) {
+            const leftIntersectionPoint = menuMesh.optionsMesh.leftLine.closestPointToPoint(intersectionPoint, true, localVector2);
+
+            const topIntersectionPoint = menuMesh.optionsMesh.topLine.closestPointToPoint(intersectionPoint, true, localVector3);
+
+            const xFactor = topIntersectionPoint.distanceTo(menuMesh.optionsMesh.topLine.start) / menuWorldWidth;
+            const yFactor = leftIntersectionPoint.distanceTo(menuMesh.optionsMesh.leftLine.start) / menuWorldHeight;
+            const distance = controllerMesh.ray.origin.distanceTo(intersectionPoint);
+
+            // console.log('intersection', menuMesh.optionsMesh.leftLine.start.toArray().join(','), menuMesh.optionsMesh.leftLine.end.toArray().join(','), topIntersectionPoint.toArray().join(','), menuMesh.optionsMesh.topLine.start.toArray().join(','), menuMesh.optionsMesh.leftLine.start.toArray().join(','));
+
+            if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < rayDistance) {
+              const x = xFactor * menuWidth;
+              const y = yFactor * menuHeight;
+
+              if (y < urlBarOffset*2) {
                 intersectionPoints.push(intersectionPoint.clone());
                 intersectionCbs.push(() => {
                   controllerMesh.rayMesh.scale.z = distance;
