--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -127,7 +127,7 @@ const _makeRenderer = () => {
   };
 };
 
-const _openUrl = (u, position = new THREE.Vector3(), rotation = new THREE.Quaternion(), scale = new THREE.Vector3(1, 1, 1), d = 3) => {
+const _openUrl = (u, position = new THREE.Vector3(), rotation = new THREE.Quaternion(), scale = new THREE.Vector3(1, 1/window.innerWidth*window.innerHeight, 1), d = 3) => {
   const _drawOk = () => {
     console.log('Load ok: ' + u);
   };
