Clean up realitytabs.html _openUrl example call

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1270,8 +1270,7 @@ function animate(time, frame) {
 
 // reality tabs
 
-// _openUrl('realitytab.html?color=29b6f6', new THREE.Vector3(0.05, 1.55, -1 + 0.05));
-// _openUrl('realitytab.html?color=ab47bc', new THREE.Vector3(-0.05, 1.45, -1));
+// _openUrl('realitytab.html?color=ab47bc', new THREE.Vector3(-0.05, 0.5, 0), undefined, 2);
 
 // bootstrap
 
